2010-08-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added grid mask support
	
2010-07-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: the last lon index is sometimes incorrect (bug fix) [report:Flore Mounier]
	
2010-07-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Module Expr: added missing value support [request: Marco van Hulten]

2010-07-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridFromNCfile: check grid_dims
	* seldate: open output file only when time steps found (bug fix) [report: Hannes Reuter]

2010-07-12  Cedrick Ansorge <Cedrick.Ansorge@zmaw.de>

	* Added module Filter - Time series filtering

2010-07-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.4.5.1 released

2010-07-05 Edi Kirk <E.Kirk@gmx.de>

	* GRIB1 decode: Correct ZeroShiftError of simple packed spherical harmonics

2010-06-30  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* bug fix for wrong result of SZIP compressed GRIB records with 24 bit 
	  packing and a compression ratio < 1.05 [report: Aiko Voigt]

2010-06-28  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Version 1.4.5 released

2010-06-17  Etienne Tourigny <tourigny@sca.uqam.ca>

	* Added operator setvals - Set list of old values to new values

2010-05-18  Cedrick Ansorge <Cedrick.Ansorge@zmaw.de>

	* Added operator eof - Calculate EOFs in spatial or time space
        * Added operator eoftime - Calculate EOFs in time space
        * Added operator eofspatial - Calculate EOFs in spatial space
	* Added operator eofcoeff - Principal coefficients of EOFs

2010-05-17  Ralf Mueller  <Ralf.Mueller@zmaw.de>

	* Added operator consecsum - Consecutive Sum
	* Added operator consects - Consecutive Timesteps

2010-04-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.4
	* Version 1.4.4 released

2010-04-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

        * fldsum: change result from 0 to missval, if only missing values found [report: Angelika Heil]