@@ -1,3 +1,7 @@
+2010-08-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* changed predefined gaussian grid names from t<RES>grid to n<N>
+	
 2010-08-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
 	* added grid mask support
